deployment/k8s/periscope/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: periscope
  labels:
    name: periscope
    istio-injection: enabled
