deployment/k8s/periscope/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: periscope-v1
  labels:
    app: periscope
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: periscope
      version: v1
  template:
    metadata:
      labels:
        app: periscope
        version: v1
    spec:
      serviceAccountName: periscope-sa
      
      containers:
      - name: periscope
        image: gcr.io/williams-playground/bigwill/periscope-opensource:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        ports:
        - containerPort: 7000

      imagePullSecrets:
        - name: gcr-json-key
