deployment/k8s/periscope/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: periscope
  namespace: periscope
spec:
  selector:
    app: periscope
  ports:
    - protocol: TCP
      port: 7000
