deployment/k8s/periscope/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: periscope
  namespace: periscope
spec:
  host: periscope
  subsets:
  - name: v1
    labels:
      version: v1
